# tinycwrap

./: .gitignore  README.md  cmodule.py  ex_kernel.py  kernels.c  pyproject.toml  release.sh
examples/: ex_kernel.py  kernels.c
examples/simple/: ex_kernel.py  kernels.c
examples/struct/: ex_struct.py  points.c
tests/: cgeom.c  cgeom.h  kernels.c  test_examples.py  test_geom.py  test_kernels.c  test_kernels.h  test_kernels.py  test_path.py
tests/t1/: base.c  base.h  path.c  path.h
tinycwrap/: __init__.py  cmodule.py  parsing.py
